Fix focus style gap at top in keyline-block
File-list items contained by div.keyline-block's
are pushed down 3px more than elsewhere which
creates a gap between the top of the focus style
and the keyline above. This extends the part of
the focus style made up by a box-shadow by 3px so
it covers the gap.

--- a/app/assets/stylesheets/views/dashboard.scss
+++ b/app/assets/stylesheets/views/dashboard.scss
@@ -120,6 +120,11 @@
   &.file-list-filename-large {
     /* override box-shadow to push underline down a bit */
     box-shadow: 0 -2px $govuk-focus-colour, 0 5px $govuk-focus-text-colour;
+
+    // File-list items contained by keyline-blocks have more spacing at the top so adapt to cover it
+    .keyline-block > .file-list & {
+      box-shadow: 0 -5px $govuk-focus-colour, 0 5px $govuk-focus-text-colour;
+    }
   }
 
   & + .file-list-hint,
